[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/BodyDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/SectMembersScreen.gd" type="Script" id=2]
[ext_resource path="res://ui/SectionMenu.gd" type="Script" id=3]
[ext_resource path="res://ui/SectButton.gd" type="Script" id=4]
[ext_resource path="res://ui/MembersButton.gd" type="Script" id=5]
[ext_resource path="res://ui/PathsButton.gd" type="Script" id=6]

[node name="MainGame" type="MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="SectionMenu" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 64.0
script = ExtResource( 3 )

[node name="MenuButtons" type="GridContainer" parent="VBoxContainer/SectionMenu"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 57.0
columns = 10

[node name="SectButton" type="Button" parent="VBoxContainer/SectionMenu/MenuButtons"]
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "Sect"
script = ExtResource( 4 )

[node name="MembersButton" type="Button" parent="VBoxContainer/SectionMenu/MenuButtons"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "Members"
script = ExtResource( 5 )

[node name="PathsButton" type="Button" parent="VBoxContainer/SectionMenu/MenuButtons"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "Paths"
script = ExtResource( 6 )

[node name="MainDisplay" type="PanelContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SectMembersScreen" type="HBoxContainer" parent="VBoxContainer/MainDisplay"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1005.0
script = ExtResource( 2 )

[node name="SectMembersListContainer" type="ScrollContainer" parent="VBoxContainer/MainDisplay/SectMembersScreen"]
margin_right = 178.0
margin_bottom = 998.0
scroll_horizontal_enabled = false

[node name="SectMembersList" type="VBoxContainer" parent="VBoxContainer/MainDisplay/SectMembersScreen/SectMembersListContainer"]
margin_right = 178.0
margin_bottom = 20.0

[node name="RecruitButton" type="Button" parent="VBoxContainer/MainDisplay/SectMembersScreen/SectMembersListContainer/SectMembersList"]
margin_right = 178.0
margin_bottom = 20.0
text = "Recruit New Sect Member"

[node name="BodyDisplay" parent="VBoxContainer/MainDisplay/SectMembersScreen" instance=ExtResource( 1 )]
margin_left = 182.0
margin_right = 651.0
margin_bottom = 998.0

[node name="SectScreen" type="CenterContainer" parent="VBoxContainer/MainDisplay"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1005.0

[node name="Label" type="Label" parent="VBoxContainer/MainDisplay/SectScreen"]
margin_left = 916.0
margin_top = 492.0
margin_right = 990.0
margin_bottom = 506.0
text = "Sect screen"

[node name="PathsScreen" type="CenterContainer" parent="VBoxContainer/MainDisplay"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1005.0

[node name="Label" type="Label" parent="VBoxContainer/MainDisplay/PathsScreen"]
margin_left = 912.0
margin_top = 492.0
margin_right = 994.0
margin_bottom = 506.0
text = "Paths screen"
